mcm-demo-ui-jsf/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcm-demo-ui-jsf
  labels:
    k8s-app: mcm-demo-ui-jsf
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: mcm-demo-ui-jsf
  template:
    metadata:
      labels:
        k8s-app: mcm-demo-ui-jsf
    spec:
      imagePullSecrets:
      - name: registrykey
      containers:
      - name: mcm-demo-ui-jsf
        image: labcabrera/mcm-demo-ui-jsf:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
