mcm-demo-ui-jsf/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcm-demo-ui-jsf
  annotations:
    kubernetes.io/ingress.className: nginx-ingress
spec:
  rules:
    - host: mcm-demo-ui-jsf.local
      http:
        paths:
          - path: /demo-ui
            pathType: ImplementationSpecific
            backend:
              service:
                name: mcm-demo-ui-jsf
                port:
                  number: 80
